2016-08-17  Babak Shafiei  <bshafiei@apple.com>

        Merge r204575. rdar://problem/27850667

    2016-08-17  Babak Shafiei  <bshafiei@apple.com>

            Merge patch for rdar://problem/27850667.

        2016-08-16  Brent Fulgham  <bfulgham@apple.com>

                [Win] Re-export a few symbols for backwards compatibility
                <rdar://problem/27850667>

                Reviewed by Dean Jackson.

                Check in a workaround (in a custom branch) to re-export a few JavaScriptCore
                functions that had been erroneously exported by WebKit in older builds. This
                is needed so that we do not break certain old software still being used.

                * WebKitDLL.cpp:
                (DllMain): Bind functions at startup.
                (bindJavaScriptTrampoline): Find JavaScriptCore library functions and
                re-export them from WebKit.dll.
                * WebKitDLL.h:

2016-07-17  Sam Weinig  <sam@webkit.org>

        [WebKit API] Add SPI to track multiple navigations caused by a single user gesture
        <rdar://problem/26554137>
        https://bugs.webkit.org/show_bug.cgi?id=159856

        Reviewed by Dan Bernstein.

        * Plugins/PluginView.cpp:
        (WebCore::PluginView::performRequest):
        * WebCoreSupport/WebContextMenuClient.cpp:
        (WebContextMenuClient::searchWithGoogle):
        Update for new UserGestureIndicator interface.

2016-07-16  Ryosuke Niwa  <rniwa@webkit.org>

        Rename fastGetAttribute to attributeWithoutSynchronization
        https://bugs.webkit.org/show_bug.cgi?id=159852

        Reviewed by Darin Adler.

        * DOMHTMLClasses.cpp:
        (DOMHTMLElement::idName):

2016-07-15  Chris Dumez  <cdumez@apple.com>

        Use fastGetAttribute() / setAttributeWithoutSynchronization() when possible
        https://bugs.webkit.org/show_bug.cgi?id=159793

        Reviewed by Ryosuke Niwa.
